refactor(smokes): replace fixed waits with pinned contracts